# hyperlight-python

./: .gitignore  Cargo.toml  Justfile  LICENSE.txt  README.org  flake.nix
.devcontainer/: devcontainer.json  setup.sh
src/hyperlight-python/: Cargo.toml  README.org  build.rs
src/hyperlight-python/examples/class/: main.rs
src/hyperlight-python/examples/function/: main.rs
src/hyperlight-python/examples/guest-debugging/: main.rs
src/hyperlight-python/examples/hello-world/: main.rs
src/hyperlight-python/src/: lib.rs
src/hyperlight-python/src/sandbox/: loaded_py_sandbox.rs  mod.rs  proto_py_sandbox.rs  py_sandbox.rs  sandbox_builder.rs
src/micropython-lib/: Cargo.toml  README.org  build.rs
src/micropython-lib/src/: lib.rs
src/micropython-lib/stubs/: micropython_stubs.c
src/micropython-lib/stubs/include/: mpconfigport.h  stdio.h  wrapper.h
src/python-host/: Cargo.toml  README.org  build.rs
src/python-host/src/: main.rs  micropython.rs
